--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 .*.swp
 /env
 /dl
-/.config
+# /.config
 /.config.old
 /.toolchain_build_ver
 /bin
@@ -12,7 +12,7 @@
 /tmp
 /logs
 /feeds
-/feeds.conf
+# /feeds.conf
 /files
 /overlay
 /package/feeds
