--- a/.config
+++ b/.config
@@ -5304,7 +5304,7 @@ CONFIG_PACKAGE_cJSON=y
 # CONFIG_PACKAGE_confuse is not set
 # CONFIG_PACKAGE_czmq is not set
 # CONFIG_PACKAGE_dtndht is not set
-# CONFIG_PACKAGE_duktape is not set
+CONFIG_PACKAGE_duktape=m
 # CONFIG_PACKAGE_getdns is not set
 # CONFIG_PACKAGE_giflib is not set
 CONFIG_PACKAGE_glib2=m
