--- a/.config
+++ b/.config
@@ -499,8 +499,17 @@ CONFIG_ARCH="mipsel"
 #
 # Target Images
 #
-# CONFIG_TARGET_ROOTFS_INITRAMFS is not set
+CONFIG_TARGET_ROOTFS_INITRAMFS=y
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_NONE is not set
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_GZIP is not set
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_BZIP2 is not set
+CONFIG_TARGET_INITRAMFS_COMPRESSION_LZMA=y
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZO is not set
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_LZ4 is not set
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_XZ is not set
+# CONFIG_TARGET_INITRAMFS_COMPRESSION_ZSTD is not set
 CONFIG_EXTERNAL_CPIO=""
+# CONFIG_TARGET_INITRAMFS_FORCE is not set
 
 #
 # Root filesystem archives
@@ -512,7 +521,8 @@ CONFIG_EXTERNAL_CPIO=""
 # Root filesystem images
 #
 # CONFIG_TARGET_ROOTFS_EXT4FS is not set
-# CONFIG_TARGET_ROOTFS_SQUASHFS is not set
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
+CONFIG_TARGET_SQUASHFS_BLOCK_SIZE=256
 CONFIG_TARGET_UBIFS_FREE_SPACE_FIXUP=y
 CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 
@@ -793,8 +803,8 @@ CONFIG_VERSIONOPT=y
 CONFIG_VERSION_DIST="Tekadom"
 CONFIG_VERSION_NUMBER=""
 CONFIG_VERSION_CODE=""
-CONFIG_VERSION_REPO="https://openwrt.tek.sh/release/development"
-CONFIG_VERSION_HOME_URL=""
+CONFIG_VERSION_REPO="https://openwrt.tek.sh/releases/%V"
+CONFIG_VERSION_HOME_URL="https://tekadom.fr"
 CONFIG_VERSION_MANUFACTURER=""
 CONFIG_VERSION_MANUFACTURER_URL=""
 CONFIG_VERSION_BUG_URL=""
@@ -8355,3 +8365,5 @@ CONFIG_PACKAGE_uuidgen=m
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+
+CONFIG_OVERRIDE_PKGS="ucode"
