--- a/.config
+++ b/.config
@@ -223,6 +223,8 @@ CONFIG_TARGET_MULTI_PROFILE=y
 # CONFIG_TARGET_ramips_mt7621_DEVICE_zbtlink_zbt-wg3526-32m is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_zio_freezio is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_zyxel_nr7101 is not set
+# CONFIG_TARGET_ramips_mt7621_DEVICE_zyxel_nwa50ax is not set
+# CONFIG_TARGET_ramips_mt7621_DEVICE_zyxel_nwa55axe is not set
 # CONFIG_TARGET_ramips_mt7621_DEVICE_zyxel_wap6805 is not set
 
 #
@@ -404,6 +406,8 @@ CONFIG_TARGET_DEVICE_PACKAGES_ramips_mt7621_DEVICE_zbtlink_zbt-wg1602-32m=""
 # CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_zbtlink_zbt-wg3526-32m is not set
 # CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_zio_freezio is not set
 # CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_zyxel_nr7101 is not set
+# CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_zyxel_nwa50ax is not set
+# CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_zyxel_nwa55axe is not set
 # CONFIG_TARGET_DEVICE_ramips_mt7621_DEVICE_zyxel_wap6805 is not set
 # end of Target Devices
 
@@ -2258,7 +2262,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_AWK_GNU_EXTENSIONS=y
 CONFIG_BUSYBOX_CONFIG_CMP=y
 # CONFIG_BUSYBOX_CONFIG_DIFF is not set
 # CONFIG_BUSYBOX_CONFIG_ED is not set
-CONFIG_BUSYBOX_CONFIG_PATCH=y
+# CONFIG_BUSYBOX_CONFIG_PATCH is not set
 # CONFIG_BUSYBOX_CONFIG_SED is not set
 # CONFIG_BUSYBOX_CONFIG_VI is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_ALLOW_EXEC=y
@@ -2855,7 +2859,7 @@ CONFIG_PACKAGE_resolveip=m
 CONFIG_PACKAGE_rpcd=m
 CONFIG_PACKAGE_rpcd-mod-file=m
 CONFIG_PACKAGE_rpcd-mod-iwinfo=m
-# CONFIG_PACKAGE_rpcd-mod-rpcsys is not set
+CONFIG_PACKAGE_rpcd-mod-rpcsys=m
 CONFIG_PACKAGE_rpcd-mod-ucode=m
 # CONFIG_PACKAGE_selinux-policy is not set
 # CONFIG_PACKAGE_snapshot-tool is not set
@@ -2875,6 +2879,7 @@ CONFIG_PACKAGE_usign=y
 # CONFIG_PACKAGE_uxc is not set
 CONFIG_PACKAGE_wireless-tools=m
 # CONFIG_PACKAGE_zram-swap is not set
+# CONFIG_PACKAGE_zyxel-bootconfig is not set
 # end of Base system
 
 #
@@ -2885,19 +2890,20 @@ CONFIG_PACKAGE_wireless-tools=m
 # Zabbix
 #
 # CONFIG_PACKAGE_zabbix-agentd is not set
-
-#
-# SSL support
-#
-# CONFIG_ZABBIX_OPENSSL is not set
-# CONFIG_ZABBIX_GNUTLS is not set
-CONFIG_ZABBIX_NOSSL=y
+# CONFIG_PACKAGE_zabbix-agentd-gnutls is not set
+# CONFIG_PACKAGE_zabbix-agentd-openssl is not set
 # CONFIG_PACKAGE_zabbix-extra-mac80211 is not set
 # CONFIG_PACKAGE_zabbix-extra-network is not set
 # CONFIG_PACKAGE_zabbix-extra-wifi is not set
 # CONFIG_PACKAGE_zabbix-get is not set
+# CONFIG_PACKAGE_zabbix-get-gnutls is not set
+# CONFIG_PACKAGE_zabbix-get-openssl is not set
 # CONFIG_PACKAGE_zabbix-proxy is not set
+# CONFIG_PACKAGE_zabbix-proxy-gnutls is not set
+# CONFIG_PACKAGE_zabbix-proxy-openssl is not set
 # CONFIG_PACKAGE_zabbix-sender is not set
+# CONFIG_PACKAGE_zabbix-sender-gnutls is not set
+# CONFIG_PACKAGE_zabbix-sender-openssl is not set
 # CONFIG_PACKAGE_zabbix-server is not set
 
 #
@@ -2906,6 +2912,8 @@ CONFIG_ZABBIX_NOSSL=y
 # CONFIG_ZABBIX_MYSQL is not set
 CONFIG_ZABBIX_POSTGRESQL=y
 # CONFIG_PACKAGE_zabbix-server-frontend is not set
+# CONFIG_PACKAGE_zabbix-server-gnutls is not set
+# CONFIG_PACKAGE_zabbix-server-openssl is not set
 # end of Zabbix
 
 #
@@ -2982,7 +2990,7 @@ CONFIG_SYSLOGNG_LOGROTATE_ROTATE_COUNT=1
 # CONFIG_PACKAGE_autoconf is not set
 # CONFIG_PACKAGE_automake is not set
 # CONFIG_PACKAGE_binutils is not set
-# CONFIG_PACKAGE_diffutils is not set
+CONFIG_PACKAGE_diffutils=m
 # CONFIG_PACKAGE_gcc is not set
 # CONFIG_PACKAGE_gdb is not set
 # CONFIG_PACKAGE_gdbserver is not set
@@ -2995,7 +3003,7 @@ CONFIG_SYSLOGNG_LOGROTATE_ROTATE_COUNT=1
 # CONFIG_PACKAGE_mt76-test is not set
 # CONFIG_PACKAGE_objdump is not set
 # CONFIG_PACKAGE_packr is not set
-# CONFIG_PACKAGE_patch is not set
+CONFIG_PACKAGE_patch=y
 # CONFIG_PACKAGE_pkg-config is not set
 # CONFIG_PACKAGE_pkgconf is not set
 # CONFIG_PACKAGE_statik is not set
@@ -4285,11 +4293,11 @@ CONFIG_PACKAGE_perlbase-base=m
 # CONFIG_PACKAGE_perlbase-blib is not set
 CONFIG_PACKAGE_perlbase-bytes=m
 # CONFIG_PACKAGE_perlbase-charnames is not set
-# CONFIG_PACKAGE_perlbase-class is not set
+CONFIG_PACKAGE_perlbase-class=m
 # CONFIG_PACKAGE_perlbase-compress is not set
 CONFIG_PACKAGE_perlbase-config=m
 # CONFIG_PACKAGE_perlbase-cpan is not set
-# CONFIG_PACKAGE_perlbase-cwd is not set
+CONFIG_PACKAGE_perlbase-cwd=m
 # CONFIG_PACKAGE_perlbase-data is not set
 # CONFIG_PACKAGE_perlbase-db is not set
 # CONFIG_PACKAGE_perlbase-db-file is not set
@@ -4313,9 +4321,9 @@ CONFIG_PACKAGE_perlbase-essential=m
 CONFIG_PACKAGE_perlbase-fcntl=m
 # CONFIG_PACKAGE_perlbase-feature is not set
 # CONFIG_PACKAGE_perlbase-fields is not set
-# CONFIG_PACKAGE_perlbase-file is not set
+CONFIG_PACKAGE_perlbase-file=m
 # CONFIG_PACKAGE_perlbase-filecache is not set
-# CONFIG_PACKAGE_perlbase-filehandle is not set
+CONFIG_PACKAGE_perlbase-filehandle=m
 # CONFIG_PACKAGE_perlbase-filetest is not set
 # CONFIG_PACKAGE_perlbase-filter is not set
 # CONFIG_PACKAGE_perlbase-findbin is not set
@@ -4323,15 +4331,15 @@ CONFIG_PACKAGE_perlbase-fcntl=m
 CONFIG_PACKAGE_perlbase-getopt=m
 # CONFIG_PACKAGE_perlbase-hash is not set
 # CONFIG_PACKAGE_perlbase-http-tiny is not set
-# CONFIG_PACKAGE_perlbase-i18n is not set
+CONFIG_PACKAGE_perlbase-i18n=m
 # CONFIG_PACKAGE_perlbase-if is not set
-# CONFIG_PACKAGE_perlbase-integer is not set
+CONFIG_PACKAGE_perlbase-integer=m
 CONFIG_PACKAGE_perlbase-io=m
 # CONFIG_PACKAGE_perlbase-ipc is not set
 # CONFIG_PACKAGE_perlbase-json-pp is not set
 # CONFIG_PACKAGE_perlbase-less is not set
 CONFIG_PACKAGE_perlbase-list=m
-# CONFIG_PACKAGE_perlbase-locale is not set
+CONFIG_PACKAGE_perlbase-locale=m
 # CONFIG_PACKAGE_perlbase-math is not set
 # CONFIG_PACKAGE_perlbase-memoize is not set
 # CONFIG_PACKAGE_perlbase-meta-notation is not set
@@ -4345,12 +4353,12 @@ CONFIG_PACKAGE_perlbase-list=m
 # CONFIG_PACKAGE_perlbase-open is not set
 # CONFIG_PACKAGE_perlbase-ops is not set
 # CONFIG_PACKAGE_perlbase-ostype is not set
-# CONFIG_PACKAGE_perlbase-params is not set
+CONFIG_PACKAGE_perlbase-params=m
 # CONFIG_PACKAGE_perlbase-perl5db is not set
 # CONFIG_PACKAGE_perlbase-perlio is not set
 # CONFIG_PACKAGE_perlbase-pod is not set
 CONFIG_PACKAGE_perlbase-posix=m
-# CONFIG_PACKAGE_perlbase-re is not set
+CONFIG_PACKAGE_perlbase-re=m
 # CONFIG_PACKAGE_perlbase-safe is not set
 CONFIG_PACKAGE_perlbase-scalar=m
 # CONFIG_PACKAGE_perlbase-sdbm-file is not set
@@ -4372,10 +4380,10 @@ CONFIG_PACKAGE_perlbase-text=m
 CONFIG_PACKAGE_perlbase-tie=m
 # CONFIG_PACKAGE_perlbase-time is not set
 # CONFIG_PACKAGE_perlbase-unicode is not set
-# CONFIG_PACKAGE_perlbase-unicore is not set
+CONFIG_PACKAGE_perlbase-unicore=m
 # CONFIG_PACKAGE_perlbase-universal is not set
 # CONFIG_PACKAGE_perlbase-user is not set
-# CONFIG_PACKAGE_perlbase-utf8 is not set
+CONFIG_PACKAGE_perlbase-utf8=m
 # CONFIG_PACKAGE_perlbase-version is not set
 CONFIG_PACKAGE_perlbase-xsloader=m
 # end of Perl
@@ -4634,7 +4642,8 @@ CONFIG_PACKAGE_liblzma=m
 # CONFIG_PACKAGE_libzip-mbedtls is not set
 # CONFIG_PACKAGE_libzip-nossl is not set
 # CONFIG_PACKAGE_libzip-openssl is not set
-# CONFIG_PACKAGE_libzstd is not set
+CONFIG_PACKAGE_libzstd=m
+CONFIG_ZSTD_OPTIMIZE_O3=y
 # end of Compression
 
 #
@@ -6643,6 +6652,8 @@ CONFIG_PACKAGE_avahi-dbus-daemon=m
 # CONFIG_PACKAGE_unbound-control-setup is not set
 # CONFIG_PACKAGE_unbound-daemon is not set
 # CONFIG_PACKAGE_unbound-host is not set
+# CONFIG_PACKAGE_v2ray-geoip is not set
+# CONFIG_PACKAGE_v2ray-geosite is not set
 CONFIG_PACKAGE_wsdd2=m
 # CONFIG_PACKAGE_zonestitcher is not set
 # end of IP Addresses and Names
@@ -7116,20 +7127,20 @@ CONFIG_PACKAGE_uwsgi-syslog-plugin=m
 # CONFIG_PACKAGE_eapol-test is not set
 # CONFIG_PACKAGE_eapol-test-openssl is not set
 # CONFIG_PACKAGE_eapol-test-wolfssl is not set
-CONFIG_PACKAGE_hostapd=y
+# CONFIG_PACKAGE_hostapd is not set
 # CONFIG_PACKAGE_hostapd-basic is not set
 # CONFIG_PACKAGE_hostapd-basic-openssl is not set
 # CONFIG_PACKAGE_hostapd-basic-wolfssl is not set
 CONFIG_PACKAGE_hostapd-common=y
 # CONFIG_PACKAGE_hostapd-mini is not set
 # CONFIG_PACKAGE_hostapd-openssl is not set
-CONFIG_PACKAGE_hostapd-utils=m
-CONFIG_PACKAGE_hostapd-wolfssl=m
+# CONFIG_PACKAGE_hostapd-utils is not set
+# CONFIG_PACKAGE_hostapd-wolfssl is not set
 # CONFIG_PACKAGE_hs20-client is not set
 # CONFIG_PACKAGE_hs20-common is not set
 # CONFIG_PACKAGE_hs20-server is not set
 # CONFIG_PACKAGE_wpa-cli is not set
-CONFIG_PACKAGE_wpa-supplicant=m
+# CONFIG_PACKAGE_wpa-supplicant is not set
 # CONFIG_WPA_RFKILL_SUPPORT is not set
 CONFIG_WPA_MSG_MIN_PRIORITY=3
 CONFIG_WPA_WOLFSSL=y
@@ -7145,7 +7156,7 @@ CONFIG_DRIVER_11AC_SUPPORT=y
 # CONFIG_PACKAGE_wpa-supplicant-openssl is not set
 # CONFIG_PACKAGE_wpa-supplicant-p2p is not set
 # CONFIG_PACKAGE_wpa-supplicant-wolfssl is not set
-CONFIG_PACKAGE_wpad=m
+# CONFIG_PACKAGE_wpad is not set
 # CONFIG_PACKAGE_wpad-basic is not set
 # CONFIG_PACKAGE_wpad-basic-openssl is not set
 CONFIG_PACKAGE_wpad-basic-wolfssl=m
@@ -7153,7 +7164,7 @@ CONFIG_PACKAGE_wpad-basic-wolfssl=m
 # CONFIG_PACKAGE_wpad-mesh-wolfssl is not set
 # CONFIG_PACKAGE_wpad-mini is not set
 # CONFIG_PACKAGE_wpad-openssl is not set
-CONFIG_PACKAGE_wpad-wolfssl=m
+CONFIG_PACKAGE_wpad-wolfssl=y
 # end of WirelessAPD
 
 #
@@ -7241,7 +7252,6 @@ CONFIG_PACKAGE_gre=m
 # CONFIG_PACKAGE_i2pd is not set
 # CONFIG_PACKAGE_ibrdtn-tools is not set
 # CONFIG_PACKAGE_ibrdtnd is not set
-# CONFIG_PACKAGE_ieee8021xclient is not set
 # CONFIG_PACKAGE_ifstat is not set
 # CONFIG_PACKAGE_iftop is not set
 # CONFIG_PACKAGE_iiod is not set
@@ -7448,6 +7458,7 @@ CONFIG_PACKAGE_uclient-fetch=y
 # CONFIG_PACKAGE_usbip is not set
 # CONFIG_PACKAGE_usteer is not set
 # CONFIG_PACKAGE_ustp is not set
+# CONFIG_PACKAGE_v2ray-core is not set
 # CONFIG_PACKAGE_vallumd is not set
 # CONFIG_PACKAGE_vncrepeater is not set
 # CONFIG_PACKAGE_vnstat is not set
@@ -7536,13 +7547,21 @@ CONFIG_PACKAGE_xinetd=m
 #
 # CONFIG_PACKAGE_bsdtar is not set
 # CONFIG_PACKAGE_bsdtar-noopenssl is not set
-# CONFIG_PACKAGE_bzip2 is not set
+CONFIG_PACKAGE_bzip2=m
 # CONFIG_PACKAGE_gzip is not set
 # CONFIG_PACKAGE_lz4 is not set
 # CONFIG_PACKAGE_pigz is not set
 # CONFIG_PACKAGE_unrar is not set
 # CONFIG_PACKAGE_unzip is not set
-# CONFIG_PACKAGE_xz-utils is not set
+CONFIG_PACKAGE_xz-utils=m
+# CONFIG_PACKAGE_lzmadec is not set
+# CONFIG_PACKAGE_lzmainfo is not set
+CONFIG_PACKAGE_xz=m
+# CONFIG_PACKAGE_xzdec is not set
+# CONFIG_PACKAGE_xzdiff is not set
+# CONFIG_PACKAGE_xzgrep is not set
+# CONFIG_PACKAGE_xzless is not set
+# CONFIG_PACKAGE_xzmore is not set
 # CONFIG_PACKAGE_zipcmp is not set
 # CONFIG_PACKAGE_zipmerge is not set
 # CONFIG_PACKAGE_ziptool is not set
@@ -7985,7 +8004,7 @@ CONFIG_PACKAGE_coreutils-hostid=m
 CONFIG_PACKAGE_coreutils-id=m
 CONFIG_PACKAGE_coreutils-install=m
 CONFIG_PACKAGE_coreutils-join=m
-CONFIG_PACKAGE_coreutils-kill=m
+CONFIG_PACKAGE_coreutils-kill=y
 CONFIG_PACKAGE_coreutils-link=m
 CONFIG_PACKAGE_coreutils-ln=m
 CONFIG_PACKAGE_coreutils-logname=m
@@ -8061,7 +8080,7 @@ CONFIG_PACKAGE_coreutils-yes=m
 # CONFIG_PACKAGE_ctop is not set
 CONFIG_PACKAGE_dbus=m
 # CONFIG_DBUS_VERBOSE is not set
-# CONFIG_PACKAGE_dbus-utils is not set
+CONFIG_PACKAGE_dbus-utils=m
 # CONFIG_PACKAGE_device-observatory is not set
 # CONFIG_PACKAGE_dfu-util is not set
 # CONFIG_PACKAGE_digitemp is not set
@@ -8081,16 +8100,16 @@ CONFIG_PACKAGE_dtc=m
 # CONFIG_PACKAGE_extract is not set
 # CONFIG_PACKAGE_fdt-utils is not set
 CONFIG_PACKAGE_file=m
-# CONFIG_PACKAGE_findutils is not set
-# CONFIG_PACKAGE_findutils-find is not set
-# CONFIG_PACKAGE_findutils-locate is not set
-# CONFIG_PACKAGE_findutils-xargs is not set
+CONFIG_PACKAGE_findutils=m
+CONFIG_PACKAGE_findutils-find=m
+CONFIG_PACKAGE_findutils-locate=m
+CONFIG_PACKAGE_findutils-xargs=m
 # CONFIG_PACKAGE_flashrom is not set
 # CONFIG_PACKAGE_flashrom-pci is not set
 # CONFIG_PACKAGE_flashrom-spi is not set
 # CONFIG_PACKAGE_flashrom-usb is not set
 # CONFIG_PACKAGE_flent-tools is not set
-# CONFIG_PACKAGE_flock is not set
+CONFIG_PACKAGE_flock=m
 # CONFIG_PACKAGE_fritz-caldata is not set
 # CONFIG_PACKAGE_fritz-tffs is not set
 # CONFIG_PACKAGE_fritz-tffs-nand is not set
@@ -8118,7 +8137,7 @@ CONFIG_PACKAGE_file=m
 # CONFIG_PACKAGE_hplip-sane is not set
 # CONFIG_PACKAGE_hub-ctrl is not set
 # CONFIG_PACKAGE_hwclock is not set
-# CONFIG_PACKAGE_hwinfo is not set
+CONFIG_PACKAGE_hwinfo=m
 # CONFIG_PACKAGE_hwloc-utils is not set
 # CONFIG_PACKAGE_i2c-tools is not set
 CONFIG_PACKAGE_iconv=m
@@ -8144,7 +8163,7 @@ CONFIG_PACKAGE_libjson-script=y
 CONFIG_PACKAGE_libucode=y
 # CONFIG_PACKAGE_libxml2-utils is not set
 CONFIG_PACKAGE_lm-sensors=m
-# CONFIG_PACKAGE_lm-sensors-detect is not set
+CONFIG_PACKAGE_lm-sensors-detect=m
 CONFIG_PACKAGE_logger=y
 CONFIG_PACKAGE_logrotate=m
 # CONFIG_LOGROTATE_ACL is not set
@@ -8155,7 +8174,7 @@ CONFIG_PACKAGE_logrotate=m
 CONFIG_PACKAGE_lscpu=m
 # CONFIG_PACKAGE_lslocks is not set
 # CONFIG_PACKAGE_lsns is not set
-# CONFIG_PACKAGE_lsof is not set
+CONFIG_PACKAGE_lsof=m
 # CONFIG_PACKAGE_lxc is not set
 # CONFIG_PACKAGE_maccalc is not set
 # CONFIG_PACKAGE_macchanger is not set
@@ -8298,7 +8317,13 @@ CONFIG_STRACE_NONE=y
 # CONFIG_PACKAGE_sysrepocfg is not set
 # CONFIG_PACKAGE_sysrepoctl is not set
 # CONFIG_PACKAGE_sysstat is not set
-# CONFIG_PACKAGE_tar is not set
+CONFIG_PACKAGE_tar=m
+# CONFIG_PACKAGE_TAR_POSIX_ACL is not set
+# CONFIG_PACKAGE_TAR_XATTR is not set
+CONFIG_PACKAGE_TAR_BZIP2=y
+CONFIG_PACKAGE_TAR_GZIP=y
+CONFIG_PACKAGE_TAR_XZ=y
+CONFIG_PACKAGE_TAR_ZSTD=y
 # CONFIG_PACKAGE_taskset is not set
 # CONFIG_PACKAGE_taskwarrior is not set
 # CONFIG_PACKAGE_telegraf is not set
@@ -8344,7 +8369,7 @@ CONFIG_PACKAGE_uuidgen=m
 # CONFIG_PACKAGE_which is not set
 # CONFIG_PACKAGE_whiptail is not set
 # CONFIG_PACKAGE_whois is not set
-# CONFIG_PACKAGE_wifitoggle is not set
+CONFIG_PACKAGE_wifitoggle=m
 # CONFIG_PACKAGE_wipe is not set
 # CONFIG_PACKAGE_xsltproc is not set
 # CONFIG_PACKAGE_xxd is not set
