--- a/.config
+++ b/.config
@@ -1930,7 +1930,7 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_PREFER_APPLETS=y
 CONFIG_BUSYBOX_CONFIG_BUSYBOX_EXEC_PATH="/proc/self/exe"
 # CONFIG_BUSYBOX_CONFIG_SELINUX is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_CLEAN_UP is not set
-# CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG_INFO is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG_INFO=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_SYSLOG=y
 
 #
@@ -1991,7 +1991,8 @@ CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING=y
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_MAX_LEN=512
 # CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_VI is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_HISTORY=256
-# CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY is not set
+CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVEHISTORY=y
+# CONFIG_BUSYBOX_CONFIG_FEATURE_EDITING_SAVE_ON_EXIT is not set
 # CONFIG_BUSYBOX_CONFIG_FEATURE_REVERSE_SEARCH is not set
 CONFIG_BUSYBOX_CONFIG_FEATURE_TAB_COMPLETION=y
 # CONFIG_BUSYBOX_CONFIG_FEATURE_USERNAME_COMPLETION is not set
